dev/clusters/kind-macula-hub/apps/bootstrap/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: macula
  labels:
    name: macula
